Fixed answer radio buttons and text alignment

--- a/src/CSS/QuestionsPage.css
+++ b/src/CSS/QuestionsPage.css
@@ -1,21 +1,14 @@
-
 .QuestionsPage {
-  max-width: 600px;
+  max-width: 90%;
   margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   padding: 40px;
   background-color: #253759;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-
 }
-
-/* .question-container {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 15px;
-  margin-bottom: 15px;
-} */
 
 .question {
   border-bottom: 1px solid #ddd;
@@ -23,36 +16,28 @@
   margin-bottom: 15px;
 }
 
-.answers {
-  border-radius: 0.5rem;
-  border-top: 1px solid #ddd;
-  padding-top: 40px;
-  color: #ddd;
-  margin-left: 20px;
-  padding: 30px -30px;
-}
-
 .progress-bar {
   width: 100%;
   height: 20px;
-  background-color: #ddd;
+  background-color: #ffc121;
   border-radius: 10px;
-  margin-top: 15px;
+  margin-top: 0px;
+  border: 3px solid #b0babf;
 }
 .progress {
   height: 100%;
-  background-color: #b78c38;
+  background-color: #ffc121;
   border-radius: 10px;
   transition: width 0.3s ease;
 }
 
 .QuestionsPage h2 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
+  font-size: 18px;
+  margin-bottom: 0px;
   text-align: center;
   margin-top: 40px;
   margin-bottom: 30px;
-  color: #ffc107
+  color: #ffc121;
 }
 
 .QuestionsPage p {
@@ -62,11 +47,21 @@
   text-align: center;
 }
 
-.answers {
+.answer-container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  margin-right: 40px;
+  grid-template-columns: 1fr 5fr;
+  height: fit-content;
+  margin-bottom: 10px;
+}
+
+.answer-container section {
+  margin-bottom: 0;
+}
+
+.radio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .QuestionsPage button {
@@ -91,26 +86,22 @@ button:hover {
   padding: 10px 10px;
 }
 
-.answer-label{
+.answer-label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-wrap: wrap;
   color: white;
-}
-
-.QuestionsPage label{
-  margin-bottom: 15px;
+  padding: 0;
+  margin-bottom: 0px;
 }
 
 .QuestionsPage button {
   margin-left: 80%;
-  margin-top: 5%
+  margin-top: 5%;
 }
 @media (min-width: 917px) {
-  
-  .QuestionsPage{
-    /* border: 5px solid purple; */
+  .QuestionsPage {
     margin-top: 2%;
   }
-  .QuestionsPage label{
-    margin-bottom: 20px;
-  }
 }
-
